src/objects/Apttus_Config2__ProductConfiguration__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Is_Place_Holder_Quote__c</fullName>
        <description>If Config is for Proposal - check the Is place holder quote for quote header field, else it would always be false.</description>
        <formula>IF( ISPICKVAL(Apttus_Config2__BusinessObjectType__c, &quot;Proposal&quot;) ,  Apttus_QPConfig__Proposald__r.APTS_Is_Placeholder_Quote__c , false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Place Holder Quote?</label>
        <type>Checkbox</type>
    </fields>
<fields>
        <fullName>APTS_Hierarchy_Discounts__c</fullName>
        <formula>IF(
ISPICKVAL( Apttus_Config2__BusinessObjectType__c, &quot;Agreement&quot;),  TEXT(Apttus_CMConfig__AgreementId__r.APTS_Hierarchy_Discounts__c), 
IF(ISPICKVAL( Apttus_Config2__BusinessObjectType__c, &quot;Proposal&quot;),  TEXT(Apttus_QPConfig__Proposald__r.APTS_Hierarchy_Discounts__c), NULL ))</formula>
        <label>Hierarchy Discounts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Discounts__c</fullName>
        <formula>IF( 
ISPICKVAL( Apttus_Config2__BusinessObjectType__c, &quot;Agreement&quot;), TEXT(Apttus_CMConfig__AgreementId__r.APTS_Product_Discounts__c), 
IF(ISPICKVAL( Apttus_Config2__BusinessObjectType__c, &quot;Proposal&quot;), TEXT(Apttus_QPConfig__Proposald__r.APTS_Product_Discounts__c), NULL ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Discounts</label>
        <type>Text</type>
    </fields>
<fields>
        <fullName>APTS_Cart_Size__c</fullName>
        <label>Cart Size</label>
        <summaryFilterItems>
            <field>Apttus_Config2__LineItem__c.Apttus_Config2__LineType__c</field>
            <operation>equals</operation>
            <value>Product/Service</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Apttus_Config2__LineItem__c.Apttus_Config2__IsPrimaryLine__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Apttus_Config2__LineItem__c.Apttus_Config2__ConfigurationId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_Distribution_Channel_Code__c</fullName>
        <formula>IF(
ISPICKVAL(Apttus_Config2__BusinessObjectType__c,&quot;Agreement&quot;), Apttus_CMConfig__AgreementId__r.APTS_Distribution_Channel__r.APTS_Code__c,
IF(ISPICKVAL(Apttus_Config2__BusinessObjectType__c,&quot;Proposal&quot;),  Apttus_QPConfig__Proposald__r.APTS_Distribution_Channel__r.APTS_Code__c,NULL))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distribution Channel Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Hierarchy_Level__c</fullName>
        <description>Formula field to hold &quot;Hierarchy Level&quot; value of Quote or Agreement based on Business Object Type (from where configuration is created).</description>
        <formula>IF( TEXT( Apttus_Config2__BusinessObjectType__c ) = &quot;Agreement&quot;,  Apttus_CMConfig__AgreementId__r.APTS_Hierarchy_level__c , IF( TEXT( Apttus_Config2__BusinessObjectType__c ) = &quot;Proposal&quot;,  Apttus_QPConfig__Proposald__r.APTS_Hierarchy_level__c , &quot;&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hierarchy Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Business_Object_Record_Type__c</fullName>
        <description>This field will pick the value of Record Type from Agreement or Quote/Proposal record based on its Business Object Type value.</description>
        <formula>IF( TEXT( Apttus_Config2__BusinessObjectType__c )  = &quot;Agreement&quot;,   Apttus_CMConfig__AgreementId__r.RecordType.Name  ,  IF( TEXT( Apttus_Config2__BusinessObjectType__c )  = &quot;Proposal&quot;,   Apttus_QPConfig__Proposald__r.RecordType.Name  , &quot;&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Object Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Distribution_Channel_Product__c</fullName>
        <description>This field will pick the value of Distribution Channel (product) from Agreement or Quote/Proposal object based on its Business Object Type value.</description>
        <formula>IF( TEXT( Apttus_Config2__BusinessObjectType__c ) = &quot;Agreement&quot; ,  TEXT(  Apttus_CMConfig__AgreementId__r.APTS_LP_Distribution_Channel_Product__c ) ,  IF( TEXT( Apttus_Config2__BusinessObjectType__c )  = &quot;Proposal&quot;,   Apttus_QPConfig__Proposald__r.APTS_Distribution_Channel_Product__c  , &quot;&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distribution Channel (Product)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Finalize_Cart__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this value is true a trigger will be fired which will call API to finalize cart</description>
        <label>Finalize Cart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Max_LI_Discount__c</fullName>
        <description>Max. LI Discount</description>
        <label>Max. LI Discount</label>
        <summarizedField>Apttus_Config2__LineItem__c.Apttus_Config2__AdjustmentAmount__c</summarizedField>
        <summaryForeignKey>Apttus_Config2__LineItem__c.Apttus_Config2__ConfigurationId__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Sales_Organization__c</fullName>
        <description>This field will pick the value of Sales Organization from Agreement or Quote/Proposal object based on its Business Object Type value.</description>
        <formula>IF( TEXT( Apttus_Config2__BusinessObjectType__c )  = &quot;Agreement&quot;,  Apttus_CMConfig__AgreementId__r.APTS_LP_Sales_Organization__c ,  IF( TEXT( Apttus_Config2__BusinessObjectType__c ) = &quot;Proposal&quot;,  Apttus_QPConfig__Proposald__r.APTS_LP_Sales_Organization__c , &quot;&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Total_Adjustment_Amount__c</fullName>
        <label>Total Adjustment Amount</label>
        <summarizedField>Apttus_Config2__LineItem__c.Apttus_Config2__AdjustmentAmount__c</summarizedField>
        <summaryForeignKey>Apttus_Config2__LineItem__c.Apttus_Config2__ConfigurationId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Apttus_CQApprov__Approval_Status__c</fullName>
        <description>The approval status of the cart</description>
        <inlineHelpText>The approval status of the cart</inlineHelpText>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Triggered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved but Action Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Status__c</fullName>
        <description>The current status of the configuration</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Ready For Approvals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready For Finalization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finalized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Superseded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abandoned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved but Action Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>